# presenation_playground

./: .python-version  async.py  dask.ipynb  multi-processing.py  multi-threading.py  multi.ipynb  numba.ipynb  numpy_pandas_vectorization.ipynb  polars.ipynb  pyproject.toml  sync_restaurant.py  test2.ipynb  trip_duration_model.json  vaex.ipynb  vaex_ml.ipynb
cython_testers/: .python-version  cython_adapted_calc.c  cython_adapted_calc.pyx  cython_calc.c  cython_calc.pyx  n-cython.py  non-cython.py  pyproject.toml
python/: .python-version  pyproject.toml  test.ipynb
