[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Nathaniel <chnate99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.33"
pandas = "^1.5.2"
numba = "^0.56.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
