[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Nathaniel <chnate99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numba = "^0.56.4"
polars = "^0.15.15"
dask = {extras = ["diagnostics"], version = "^2023.1.0"}
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
pyarrow = "^10.0.1"
graphviz = "^0.20.1"
cython = "^0.29.33"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
