[tool.poetry]
name = "cython-testers"
version = "0.1.0"
description = ""
authors = ["Nathaniel <chnate99@gmail.com>"]
readme = "README.md"
packages = [{include = "cython_testers"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
cython = "^0.29.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
