[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Nathaniel <chnate99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
ipykernel = "^6.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
